After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 626670 - gaudieffects: Fails to link inline functions properly
gaudieffects: Fails to link inline functions properly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 0.10.20
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-08-11 20:05 UTC by Olivier Crête
Modified: 2010-08-12 08:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gaudieffects: Mark inline functions as static (1.82 KB, patch)
2010-08-11 20:06 UTC, Olivier Crête
committed Details | Review

Description Olivier Crête 2010-08-11 20:05:31 UTC
Functions defined as inline but not static seem to not link correctly and then I get warnings like:

(gst-plugin-scanner:11258): GStreamer-WARNING **: Failed to load plugin '/home/ocrete/cinst/lib/gstreamer-0.10/libgstgaudieffects.so': /home/ocrete/cinst/lib/gstreamer-0.10/libgstgaudieffects.so: undefined symbol: abs_int

attached patch fixes the problem
Comment 1 Olivier Crête 2010-08-11 20:06:09 UTC
Created attachment 167656 [details] [review]
gaudieffects: Mark inline functions as static
Comment 2 Tim-Philipp Müller 2010-08-11 22:43:54 UTC
Comment on attachment 167656 [details] [review]
gaudieffects: Mark inline functions as static

Looks good, thanks!
Comment 3 Tim-Philipp Müller 2010-08-12 08:16:31 UTC
commit db44c62acbad6b0de4c1393c631210508bedd021
Author: Olivier Crête <olivier.crete@collabora.co.uk>
Date:   Wed Aug 11 22:03:07 2010 +0200

    gaudieffects: Mark inline functions as static inline
    
    Otherwise it fails to correctly link them in some cases.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=626670